fixed notification bar sizing on smaller screens

--- a/cloud-haven-react-app/src/components/Notifications/NotificationBar.css
+++ b/cloud-haven-react-app/src/components/Notifications/NotificationBar.css
@@ -1,5 +1,6 @@
 .NotifBar {
     width: 28%;
+    min-width: 350px;
     height: 100%;
     background-color: #EDEDED;
     margin: 2% 0 0 2%;
